--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=qwer1234
+spring.datasource.password=password
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/fleetappdb?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
